updated output uart data with more channels

--- a/src/object_detection/CMakeLists.txt
+++ b/src/object_detection/CMakeLists.txt
@@ -71,7 +71,7 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
-  launch rviz map
+  launch rviz map include
   DESTINATION share/${PROJECT_NAME}/
 )
 
